# familiar-second-brain

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: codex.toml.snippet  mcp.json.snippet
docs/: architecture.md  installation.md  operations.md  roadmap.md  security.md
kimi_skill/: SKILL.md
kimi_skill/scripts/: brain_brief.py  inbox_triage.py  project_briefs.py  resurface.py  save_to_familiar.py  summarize_sessions.py  vault_audit.py
kimi_skill/tests/: test_brain_brief.py  test_inbox_triage.py  test_project_briefs.py  test_resurface.py  test_save_to_familiar.py  test_summarize_sessions.py  test_vault_audit.py
scripts/: install.py  smoke_mcp.py
src/: familiar_mcp_server.py
tests/: test_familiar_mcp_server.py
