[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "familiar-second-brain"
version = "0.1.0"
description = "Local MCP server and Kimi Work skill for a Markdown-based Familiar second brain."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Avid" }]
dependencies = []

[project.scripts]
familiar-mcp = "familiar_mcp_server:main"

[tool.setuptools]
py-modules = ["familiar_mcp_server"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests", "kimi_skill/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py39"
